# teste

./: Makefile  codigo.py  pyproject.toml  test_codigo.py
.github/workflows/: test_push.yaml
