[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["Livia Pereira <liviaspereira@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
typing-extensions = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
